--- a/src/components/home/Images.scss
+++ b/src/components/home/Images.scss
@@ -1,5 +1,5 @@
 @use '../../styles/variables' as vars;
-@use "../../styles/mixins" as *;
+@use '../../styles/mixins' as *;
 
 .gallery {
   margin: 2rem auto;
@@ -35,10 +35,13 @@
 
   &__more-link {
     @include button-styles;
-    text-decoration: none;
-    display: inline-flex;
-    align-items: center;
-    gap: 0.75rem;
+
+    & {
+      text-decoration: none;
+      display: inline-flex;
+      align-items: center;
+      gap: 0.75rem;
+    }
 
     svg {
       width: 20px;
